--- a/index2_how_to_work.html
+++ b/index2_how_to_work.html
@@ -13,11 +13,11 @@
                 }
 
                 var vs = `#version 300 es
-in vec2 a_position;
+in vec2 a_position; // attribute (in)
 
-uniform vec2 u_resolution;
+uniform vec2 u_resolution; // uniform (uniform)
 
-out vec4 v_color;
+out vec4 v_color; // varying (out)
 
 void main() {
 
@@ -35,7 +35,7 @@ void main() {
 precision highp float;
 
 // 注意: 片段着色器中的 varying 类型变量的值是经过插值计算过的值
-in vec4 v_color;
+in vec4 v_color; // varying (in)
 
 out vec4 outColor;
 
