--- a/index4_render_image_ex.html
+++ b/index4_render_image_ex.html
@@ -4,56 +4,107 @@
     <body>
         <canvas id="c" width="640" height="480"></canvas>
         <script>
-            var vertexShaderSource = `#version 300 es
-precision highp float;
+            function computeKernelWeight(kernel) {
+                var weight = kernel.reduce(function (prev, curr) {
+                    return prev + curr;
+                });
+                return weight <= 0 ? 1 : weight;
+            }
 
-in vec2 a_texCoord;
+            var vertexShaderSource = `#version 300 es
+
+// an attribute is an input (in) to a vertex shader.
+// It will receive data from a buffer
 in vec2 a_position;
+in vec2 a_texCoord;
+
+// Used to pass in the resolution of the canvas
 uniform vec2 u_resolution;
+uniform float u_flipY;
+
+// Used to pass the texture coordinates to the fragment shader
 out vec2 v_texCoord;
 
+// all shaders have a main function
 void main() {
-  vec2 zeroToOne = a_position / u_resolution;
-  vec2 zeroToTwo = zeroToOne * 2.0;
-  vec2 clipSpace = zeroToTwo - 1.0;
-  gl_Position = vec4(clipSpace, 0, 1);
-  v_texCoord = vec2(a_texCoord.x, 1.0 - a_texCoord.y);
-}
-`;
+
+    // convert the position from pixels to 0.0 to 1.0
+    vec2 zeroToOne = a_position / u_resolution;
+
+    // convert from 0->1 to 0->2
+    vec2 zeroToTwo = zeroToOne * 2.0;
+
+    // convert from 0->2 to -1->+1 (clipspace)
+    vec2 clipSpace = zeroToTwo - 1.0;
+
+    gl_Position = vec4(clipSpace * vec2(1, u_flipY), 0, 1);
+
+    // pass the texCoord to the fragment shader
+    // The GPU will interpolate this value between points.
+    v_texCoord = a_texCoord;
+}`;
 
             var fragmentShaderSource = `#version 300 es
+
+// fragment shaders don't have a default precision so we need
+// to pick one. highp is a good default. It means "high precision"
 precision highp float;
 
-in vec2 v_texCoord;
-
+// our texture
 uniform sampler2D u_image;
+
+// the convolution kernal data
 uniform float u_kernel[9];
 uniform float u_kernelWeight;
 
+// the texCoords passed in from the vertex shader.
+in vec2 v_texCoord;
+
+// we need to declare an output for the fragment shader
 out vec4 outColor;
 
 void main() {
-    vec2 onePixel = vec2(1.0) / vec2(textureSize(u_image, 0));
-
-    // outColor = texture(u_image, v_texCoord);
-
-    // outColor = texture(u_image, v_texCoord).bgra;
-
-    // outColor = (texture(u_image, v_texCoord) + texture(u_image, v_texCoord + vec2(-onePixel.x, 0)) + texture(u_image, v_texCoord + vec2(onePixel.x, 0))) / 3.0;
+    vec2 onePixel = vec2(1) / vec2(textureSize(u_image, 0));
 
     vec4 colorSum =
-      texture(u_image, v_texCoord + onePixel * vec2(-1, -1)) * u_kernel[0] +
-      texture(u_image, v_texCoord + onePixel * vec2( 0, -1)) * u_kernel[1] +
-      texture(u_image, v_texCoord + onePixel * vec2( 1, -1)) * u_kernel[2] +
-      texture(u_image, v_texCoord + onePixel * vec2(-1,  0)) * u_kernel[3] +
-      texture(u_image, v_texCoord + onePixel * vec2( 0,  0)) * u_kernel[4] +
-      texture(u_image, v_texCoord + onePixel * vec2( 1,  0)) * u_kernel[5] +
-      texture(u_image, v_texCoord + onePixel * vec2(-1,  1)) * u_kernel[6] +
-      texture(u_image, v_texCoord + onePixel * vec2( 0,  1)) * u_kernel[7] +
-      texture(u_image, v_texCoord + onePixel * vec2( 1,  1)) * u_kernel[8] ;
+        texture(u_image, v_texCoord + onePixel * vec2(-1, -1)) * u_kernel[0] +
+        texture(u_image, v_texCoord + onePixel * vec2( 0, -1)) * u_kernel[1] +
+        texture(u_image, v_texCoord + onePixel * vec2( 1, -1)) * u_kernel[2] +
+        texture(u_image, v_texCoord + onePixel * vec2(-1,  0)) * u_kernel[3] +
+        texture(u_image, v_texCoord + onePixel * vec2( 0,  0)) * u_kernel[4] +
+        texture(u_image, v_texCoord + onePixel * vec2( 1,  0)) * u_kernel[5] +
+        texture(u_image, v_texCoord + onePixel * vec2(-1,  1)) * u_kernel[6] +
+        texture(u_image, v_texCoord + onePixel * vec2( 0,  1)) * u_kernel[7] +
+        texture(u_image, v_texCoord + onePixel * vec2( 1,  1)) * u_kernel[8] ;
     outColor = vec4((colorSum / u_kernelWeight).rgb, 1);
-}
-`;
+}`;
+
+            // 定义一些卷积核
+            var kernels = {
+                normal: [0, 0, 0, 0, 1, 0, 0, 0, 0],
+                gaussianBlur: [0.045, 0.122, 0.045, 0.122, 0.332, 0.122, 0.045, 0.122, 0.045],
+                gaussianBlur2: [1, 2, 1, 2, 4, 2, 1, 2, 1],
+                // gaussianBlur3: [0, 1, 0, 1, 1, 1, 0, 1, 0],
+                // unsharpen: [-1, -1, -1, -1, 9, -1, -1, -1, -1],
+                // sharpness: [0, -1, 0, -1, 5, -1, 0, -1, 0],
+                // sharpen: [-1, -1, -1, -1, 16, -1, -1, -1, -1],
+                // edgeDetect: [-0.125, -0.125, -0.125, -0.125, 1, -0.125, -0.125, -0.125, -0.125],
+                // edgeDetect2: [-1, -1, -1, -1, 8, -1, -1, -1, -1],
+                // edgeDetect3: [-5, 0, 0, 0, 0, 0, 0, 0, 5],
+                // edgeDetect4: [-1, -1, -1, 0, 0, 0, 1, 1, 1],
+                edgeDetect5: [-1, -1, -1, 2, 2, 2, -1, -1, -1],
+                edgeDetect6: [-5, -5, -5, -5, 39, -5, -5, -5, -5],
+                // sobelHorizontal: [1, 2, 1, 0, 0, 0, -1, -2, -1],
+                // sobelVertical: [1, 0, -1, 2, 0, -2, 1, 0, -1],
+                // previtHorizontal: [1, 1, 1, 0, 0, 0, -1, -1, -1],
+                // previtVertical: [1, 0, -1, 1, 0, -1, 1, 0, -1],
+                // boxBlur: [0.111, 0.111, 0.111, 0.111, 0.111, 0.111, 0.111, 0.111, 0.111],
+                // triangleBlur: [0.0625, 0.125, 0.0625, 0.125, 0.25, 0.125, 0.0625, 0.125, 0.0625],
+                // emboss: [-2, -1, 0, -1, 1, 1, 0, 1, 2],
+            };
+
+            // 将要使用的效果列表
+            var effectsToApply = Object.keys(kernels);
 
             function render(image) {
                 var canvas = document.querySelector("#c");
@@ -63,31 +114,220 @@ void main() {
                     return;
                 }
 
-                // 创建两个纹理绑定到帧缓冲
+                var vertexShader = createShader(gl, gl.VERTEX_SHADER, vertexShaderSource);
+                var fragmentShader = createShader(gl, gl.FRAGMENT_SHADER, fragmentShaderSource);
+                var program = createProgram(gl, vertexShader, fragmentShader);
+
+                var positionAttributeLocation = gl.getAttribLocation(program, "a_position");
+                var texCoordAttributeLocation = gl.getAttribLocation(program, "a_texCoord");
+                var resolutionLocation = gl.getUniformLocation(program, "u_resolution");
+                var imageLocation = gl.getUniformLocation(program, "u_image");
+                var kernelLocation = gl.getUniformLocation(program, "u_kernel[0]");
+                var kernelWeightLocation = gl.getUniformLocation(program, "u_kernelWeight");
+                var flipYLocation = gl.getUniformLocation(program, "u_flipY");
+
+                // Create a vertex array object (attribute state)
+                var vao = gl.createVertexArray();
+                // and make it the one we're currently working with
+                gl.bindVertexArray(vao);
+
+                var positionBuffer = gl.createBuffer();
+                gl.enableVertexAttribArray(positionAttributeLocation);
+                gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+                setRectangle(gl, 0, 0, image.width, image.height);
+                var size = 2; // 2 components per iteration
+                var type = gl.FLOAT; // the data is 32bit floats
+                var normalize = false; // don't normalize the data
+                var stride = 0; // 0 = move forward size * sizeof(type) each iteration to get the next position
+                var offset = 0; // start at the beginning of the buffer
+                gl.vertexAttribPointer(positionAttributeLocation, size, type, normalize, stride, offset);
+
+                // provide texture coordinates for the rectangle.
+                var texCoordBuffer = gl.createBuffer();
+                gl.bindBuffer(gl.ARRAY_BUFFER, texCoordBuffer);
+                setRectangle(gl, 0, 0, 1.0, 1.0);
+                gl.enableVertexAttribArray(texCoordAttributeLocation);
+                var size = 2; // 2 components per iteration
+                var type = gl.FLOAT; // the data is 32bit floats
+                var normalize = false; // don't normalize the data
+                var stride = 0; // 0 = move forward size * sizeof(type) each iteration to get the next position
+                var offset = 0; // start at the beginning of the buffer
+                gl.vertexAttribPointer(texCoordAttributeLocation, size, type, normalize, stride, offset);
+
+                function createAndSetupTexture(gl) {
+                    var texture = gl.createTexture();
+                    gl.bindTexture(gl.TEXTURE_2D, texture);
+
+                    // Set up texture so we can render any size image and so we are
+                    // working with pixels.
+                    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
+                    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
+                    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.NEAREST);
+                    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.NEAREST);
+                    return texture;
+                }
+
+                // Create a texture and put the image in it.
+                var originalImageTexture = createAndSetupTexture(gl);
+
+                // Upload the image into the texture.
+                var mipLevel = 0; // the largest mip
+                var internalFormat = gl.RGBA; // format we want in the texture
+                var srcFormat = gl.RGBA; // format of data we are supplying
+                var srcType = gl.UNSIGNED_BYTE; // type of data we are supplying
+                gl.texImage2D(gl.TEXTURE_2D, mipLevel, internalFormat, srcFormat, srcType, image);
+
+                // create 2 textures and attach them to framebuffers.
                 var textures = [];
                 var framebuffers = [];
                 for (var ii = 0; ii < 2; ++ii) {
                     var texture = createAndSetupTexture(gl);
                     textures.push(texture);
 
-                    // 设置纹理大小和图像大小一致
-                    var mipLevel = 0; // 指定详细级别
-                    var internalFormat = gl.RGBA; // 指定纹理中的颜色组件
-                    var border = 0; // 必须为 0
-                    var srcFormat = gl.RGBA; // 指定纹理的数据格式
-                    var srcType = gl.UNSIGNED_BYTE; // 指定纹理的数据类型
-                    var data = null; // data没有值意味着创建一个空白的纹理
+                    // make the texture the same size as the image
+                    var mipLevel = 0; // the largest mip
+                    var internalFormat = gl.RGBA; // format we want in the texture
+                    var border = 0; // must be 0
+                    var srcFormat = gl.RGBA; // format of data we are supplying
+                    var srcType = gl.UNSIGNED_BYTE; // type of data we are supplying
+                    var data = null; // no data = create a blank texture
                     gl.texImage2D(gl.TEXTURE_2D, mipLevel, internalFormat, image.width, image.height, border, srcFormat, srcType, data);
 
-                    // 创建一个帧缓冲
+                    // Create a framebuffer
                     var fbo = gl.createFramebuffer();
                     framebuffers.push(fbo);
                     gl.bindFramebuffer(gl.FRAMEBUFFER, fbo);
 
-                    // 绑定纹理到帧缓冲
+                    // Attach a texture to it.
                     var attachmentPoint = gl.COLOR_ATTACHMENT0;
                     gl.framebufferTexture2D(gl.FRAMEBUFFER, attachmentPoint, gl.TEXTURE_2D, texture, mipLevel);
                 }
+
+                drawEffects();
+
+                function drawEffects() {
+                    // Tell WebGL how to convert from clip space to pixels
+                    gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+
+                    // Clear the canvas
+                    gl.clearColor(0, 0, 0, 0);
+                    gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+                    // Tell it to use our program (pair of shaders)
+                    gl.useProgram(program);
+
+                    // Bind the attribute/buffer set we want.
+                    gl.bindVertexArray(vao);
+
+                    // start with the original image on unit 0
+                    gl.activeTexture(gl.TEXTURE0 + 0);
+                    gl.bindTexture(gl.TEXTURE_2D, originalImageTexture);
+
+                    // Tell the shader to get the texture from texture unit 0
+                    gl.uniform1i(imageLocation, 0);
+
+                    // don't y flip images while drawing to the textures
+                    gl.uniform1f(flipYLocation, 1);
+
+                    // loop through each effect we want to apply.
+                    for (var ii = 0; ii < effectsToApply.length; ++ii) {
+                        // Setup to draw into one of the framebuffers.
+                        setFramebuffer(framebuffers[ii % 2], image.width, image.height);
+
+                        drawWithKernel(effectsToApply[ii]);
+
+                        // for the next draw, use the texture we just rendered to.
+                        gl.bindTexture(gl.TEXTURE_2D, textures[ii % 2]);
+                    }
+
+                    // finally draw the result to the canvas.
+                    gl.uniform1f(flipYLocation, -1); // need to y flip for canvas
+
+                    setFramebuffer(null, gl.canvas.width, gl.canvas.height);
+
+                    // Clear the canvas
+                    gl.clearColor(0, 0, 0, 0);
+                    gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+                    drawWithKernel("normal");
+                }
+
+                function setFramebuffer(fbo, width, height) {
+                    // make this the framebuffer we are rendering to.
+                    gl.bindFramebuffer(gl.FRAMEBUFFER, fbo);
+
+                    // Tell the shader the resolution of the framebuffer.
+                    gl.uniform2f(resolutionLocation, width, height);
+
+                    // Tell WebGL how to convert from clip space to pixels
+                    gl.viewport(0, 0, width, height);
+                }
+
+                function drawWithKernel(name) {
+                    // set the kernel and it's weight
+                    gl.uniform1fv(kernelLocation, kernels[name]);
+                    gl.uniform1f(kernelWeightLocation, computeKernelWeight(kernels[name]));
+
+                    // Draw the rectangle.
+                    var primitiveType = gl.TRIANGLES;
+                    var offset = 0;
+                    var count = 6;
+                    gl.drawArrays(primitiveType, offset, count);
+                }
+
+                /*
+                var texture = createAndSetupTexture(gl);
+                gl.activeTexture(gl.TEXTURE0 + 0);
+                var mipLevel = 0; // the largest mip
+                var internalFormat = gl.RGBA; // format we want in the texture
+                var srcFormat = gl.RGBA; // format of data we are supplying
+                var srcType = gl.UNSIGNED_BYTE; // type of data we are supplying
+                gl.texImage2D(gl.TEXTURE_2D, mipLevel, internalFormat, srcFormat, srcType, image);
+                gl.bindVertexArray(null);
+
+                var vao = gl.createVertexArray();
+                gl.bindVertexArray(vao);
+                var texCoordBuffer = gl.createBuffer();
+                gl.bindBuffer(gl.ARRAY_BUFFER, texCoordBuffer);
+                setRectangle(gl, 0, 0, 1, 1);
+                gl.enableVertexAttribArray(texCoordAttributeLocation);
+                var size = 2; // 2 components per iteration
+                var type = gl.FLOAT; // the data is 32bit floats
+                var normalize = false; // don't normalize the data
+                var stride = 0; // 0 = move forward size * sizeof(type) each iteration to get the next position
+                var offset = 0; // start at the beginning of the buffer
+                gl.vertexAttribPointer(texCoordAttributeLocation, size, type, normalize, stride, offset);
+
+                gl.bindVertexArray(vao);
+                var positionBuffer = gl.createBuffer();
+                gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+                setRectangle(gl, 20, 20, image.width, image.height);
+                gl.enableVertexAttribArray(positionAttributeLocation);
+                var size = 2; // 2 components per iteration
+                var type = gl.FLOAT; // the data is 32bit floats
+                var normalize = false; // don't normalize the data
+                var stride = 0; // 0 = move forward size * sizeof(type) each iteration to get the next position
+                var offset = 0; // start at the beginning of the buffer
+                gl.vertexAttribPointer(positionAttributeLocation, size, type, normalize, stride, offset);
+                gl.bindVertexArray(null);
+
+                gl.bindVertexArray(vao);
+                gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+                gl.useProgram(program);
+                gl.uniform2f(resolutionLocation, gl.canvas.width, gl.canvas.height);
+                gl.uniform1i(imageLocation, 0);
+                gl.clearColor(Math.random(), Math.random(), Math.random(), 1.0);
+                gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+                gl.uniform1fv(kernelLocation, kernels["normal"]);
+                gl.uniform1f(kernelWeightLocation, computeKernelWeight(kernels["normal"]));
+                var primitiveType = gl.TRIANGLES;
+                var offset = 0;
+                var count = 6;
+                gl.drawArrays(primitiveType, offset, count);
+
+                gl.deleteBuffer(positionBuffer);
+                gl.deleteBuffer(texCoordBuffer);
+                */
             }
 
             function main() {
