--- a/index8_2d_scale.html
+++ b/index8_2d_scale.html
@@ -21,11 +21,15 @@ in vec2 a_position;
 uniform vec2 u_resolution;
 uniform vec2 u_translation;
 uniform vec2 u_rotation;
+uniform vec2 u_scale;
 
 void main() {
+  vec2 scaledPosition = a_position * u_scale;
+
   vec2 rotatedPosition = vec2(
-  a_position.x * u_rotation.y + a_position.y * u_rotation.x,
-  a_position.y * u_rotation.y - a_position.x * u_rotation.x);
+    scaledPosition.x * u_rotation.y + scaledPosition.y * u_rotation.x,
+    scaledPosition.y * u_rotation.y - scaledPosition.x * u_rotation.x);
+
   vec2 zeroToOne = (rotatedPosition + u_translation) / u_resolution;
   vec2 zeroToTwo = zeroToOne * 2.0;
   vec2 clipSpace = zeroToTwo - 1.0;
@@ -55,6 +59,7 @@ void main() {
                 var colorUniformLocation = gl.getUniformLocation(program, "u_color");
                 var translationLocation = gl.getUniformLocation(program, "u_translation");
                 var rotationLocation = gl.getUniformLocation(program, "u_rotation");
+                var scaleLocation = gl.getUniformLocation(program, "u_scale");
 
                 var vao = gl.createVertexArray();
                 gl.bindVertexArray(vao);
@@ -87,6 +92,7 @@ void main() {
                     );
                 }
 
+                var scale = [1, 1];
                 var rotation = [0, 1];
                 var translation = [0, 0];
                 var width = 100;
@@ -103,6 +109,7 @@ void main() {
                     gl.uniform4fv(colorUniformLocation, color);
                     gl.uniform2fv(translationLocation, translation);
                     gl.uniform2fv(rotationLocation, rotation);
+                    gl.uniform2fv(scaleLocation, scale);
 
                     gl.bindVertexArray(vao);
                     gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
@@ -119,6 +126,7 @@ void main() {
                 setInterval(function () {
                     elapse += INTERVAL;
 
+                    scale = [Math.cos(elapse), Math.sin(elapse)];
                     rotation = [Math.cos(elapse), Math.sin(elapse)];
                     translation[0] += vel.x;
                     translation[1] += vel.y;
