--- a/index9_2d_matrix.html
+++ b/index9_2d_matrix.html
@@ -5,9 +5,11 @@
         <script src="./buildin.js"></script>
         <script src="./m3.js"></script>
         <script>
-            var m = [1, 2, 3, 4, 5, 6, 7, 8, 9];
-            m3.print(m3.multiply1(m, m));
-            m3.print(m3.multiply2(m, m));
+            var m1 = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+            var m2 = [9, 8, 7, 6, 5, 4, 3, 2, 1];
+            m3.print(m3.multiply1(m1, m2));
+            m3.print(m3.multiply2(m1, m2));
+            m3.print(m3.multiply(m1, m2));
         </script>
     </body>
 </html>
