--- a/index9_2d_matrix.html
+++ b/index9_2d_matrix.html
@@ -1,7 +1,7 @@
 <html>
     <head></head>
     <body>
-        <canvas id="c" width="400" height="300"></canvas>
+        <canvas id="c" width="640" height="480"></canvas>
         <script src="./buildin.js"></script>
         <script src="./m3.js"></script>
         <script>
@@ -10,6 +10,158 @@
             m3.print(m3.multiply1(m1, m2));
             m3.print(m3.multiply2(m1, m2));
             m3.print(m3.multiply(m1, m2));
+
+            var gl = getGL();
+            if (!gl) {
+                console.log("Sorry. No, webgl2.");
+            }
+
+            function moveFCharacter() {
+                var width = 100;
+                var height = 30;
+
+                var vertexShaderSource = `#version 300 es
+
+in vec2 a_position;
+uniform mat3 u_matrix;
+
+void main() {
+  vec3 pos = u_matrix * vec3(a_position, 1.0);
+  gl_Position = vec4(pos.xy, 0, 1);
+}
+`;
+
+                var fragmentShaderSource = `#version 300 es
+
+precision highp float;
+
+uniform vec4 u_color;
+
+out vec4 outColor;
+
+void main() {
+  outColor = u_color;
+}
+`;
+
+                var vertexShader = createShader(gl, gl.VERTEX_SHADER, vertexShaderSource);
+                var fragmentShader = createShader(gl, gl.FRAGMENT_SHADER, fragmentShaderSource);
+                var program = createProgram(gl, vertexShader, fragmentShader);
+
+                var positionAttributeLocation = gl.getAttribLocation(program, "a_position");
+                var colorUniformLocation = gl.getUniformLocation(program, "u_color");
+                var matrixLocation = gl.getUniformLocation(program, "u_matrix");
+
+                var vao = gl.createVertexArray();
+                gl.bindVertexArray(vao);
+
+                var positionBuffer = gl.createBuffer();
+                gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+                gl.enableVertexAttribArray(positionAttributeLocation);
+                var size = 2; // 2 components per iteration
+                var type = gl.FLOAT; // the data is 32bit floats
+                var normalize = false; // don't normalize the data
+                var stride = 0; // 0 = move forward size * sizeof(type) each iteration to get the next position
+                var offset = 0; // start at the beginning of the buffer
+                gl.vertexAttribPointer(positionAttributeLocation, size, type, normalize, stride, offset);
+
+                // 在当前 ARRAY_BUFFER 缓冲存储构成 'F' 的值
+                function setGeometry(gl) {
+                    gl.bufferData(
+                        gl.ARRAY_BUFFER,
+                        new Float32Array([
+                            // 左竖
+                            0, 0, 30, 0, 0, 150, 0, 150, 30, 0, 30, 150,
+
+                            // 上横
+                            30, 0, 100, 0, 30, 30, 30, 30, 100, 0, 100, 30,
+
+                            // 中横
+                            30, 60, 67, 60, 30, 90, 30, 90, 67, 60, 67, 90,
+                        ]),
+                        gl.STATIC_DRAW
+                    );
+                }
+
+                var color = [Math.random(), Math.random(), Math.random(), 1];
+                var scale = [0.8, 0.8];
+                var radian = (-15 / 180) * Math.PI;
+                var translation = [100, 50];
+                var width = 100;
+                var height = 150;
+                function draw() {
+                    gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+
+                    gl.clearColor(0, 0, 0, 1);
+                    gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+                    gl.useProgram(program);
+
+                    gl.uniform4fv(colorUniformLocation, color);
+
+                    gl.bindVertexArray(vao);
+                    gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+
+                    var translationMatrix = m3.translation(translation[0], translation[1]);
+                    var rotationMatrix = m3.rotation(radian);
+                    var scaleMatrix = m3.scaling(scale[0], scale[1]);
+
+                    // var matrix = m3.identity();
+                    // for (var i = 0; i < 5; ++i) {
+                    //     matrix = m3.multiply(matrix, translationMatrix);
+                    //     matrix = m3.multiply(matrix, rotationMatrix);
+                    //     matrix = m3.multiply(matrix, scaleMatrix);
+
+                    //     gl.uniformMatrix3fv(matrixLocation, false, matrix);
+                    //     gl.uniform4fv(colorUniformLocation, [Math.random(), Math.random(), Math.random(), 1]);
+
+                    //     drawArrays(gl, 18);
+                    // }
+
+                    var matrix = m3.projection(gl.canvas.clientWidth, gl.canvas.clientHeight);
+                    matrix = m3.translate(matrix, translation[0], translation[1]);
+                    matrix = m3.rotate(matrix, radian);
+                    matrix = m3.scale(matrix, scale[0], scale[1]);
+                    matrix = m3.translate(matrix, -50, -75);
+
+                    gl.uniformMatrix3fv(matrixLocation, false, matrix);
+
+                    drawArrays(gl, 18);
+                }
+
+                const INTERVAL = 1 / 60;
+                var elapse = 0.0;
+                var vel = { x: Math.random() * 2 + 1.0, y: Math.random() * 2 + 1.0 };
+                setInterval(function () {
+                    elapse += INTERVAL;
+
+                    scale = [Math.cos(elapse), Math.sin(elapse)];
+                    radian = elapse;
+                    translation[0] += vel.x;
+                    translation[1] += vel.y;
+                    if (translation[0] + width > gl.canvas.width) {
+                        vel.x *= -1;
+                        translation[0] = gl.canvas.width - width;
+                    } else if (translation[0] < 0) {
+                        translation[0] = 0;
+                        vel.x *= -1;
+                    }
+
+                    if (translation[1] + height > gl.canvas.height) {
+                        translation[1] = gl.canvas.height - height;
+                        vel.y *= -1;
+                    } else if (translation[1] < 0) {
+                        translation[1] = 0;
+                        vel.y *= -1;
+                    }
+                    draw();
+                }, INTERVAL);
+
+                setGeometry(gl);
+                draw();
+            }
+
+            moveFCharacter();
         </script>
     </body>
 </html>
