--- a/index11_3d_perspective_projection.html
+++ b/index11_3d_perspective_projection.html
@@ -5,6 +5,15 @@
         <script src="./buildin.js"></script>
         <script src="./m4.js"></script>
         <script>
+            function makeZToWMatrix(fudgeFactor) {
+                return [
+                    1, 0, 0, 0,
+                    0, 1, 0, 0,
+                    0, 0, 1, fudgeFactor,
+                    0, 0, 0, 1,
+                ];
+            }
+
             var vertexShaderSource = `#version 300 es
 // 属性是输入(in)顶点着色器的，从缓冲区接收数据
 in vec4 a_position;
@@ -18,10 +27,7 @@ out vec4 v_color;
 
 // 所有着色器都有一个 main 函数
 void main() {
-  // 将位置和矩阵相乘
   gl_Position = u_matrix * a_position;
-
-  // 将颜色传递给片段着色器
   v_color = a_color;
 }`;
             var fragmentShaderSource = `#version 300 es
@@ -289,11 +295,15 @@ void main() {
 
                 var color = [Math.random(), Math.random(), Math.random(), 1];
                 var scale = [1.0, 1.0, 1.0];
-                var rotation = [(40 / 180) * Math.PI, (25 / 180) * Math.PI, (325 / 180) * Math.PI];
-                var translation = [150, 150, 0];
+                var rotation = [(190 / 180) * Math.PI, (40 / 180) * Math.PI, (30 / 180) * Math.PI];
+                var translation = [-150, 0, -360];
+                var fieldOfViewRadians = 60 / 180 * Math.PI;
 
                 // 计算矩阵
-                var matrix = m4.orthographic(0, gl.canvas.clientWidth, gl.canvas.clientHeight, 0, 200, -200);
+                var aspect = gl.canvas.clientWidth / gl.canvas.clientHeight;
+                var zNear = 1;
+                var zFar = 2000;
+                var matrix = m4.perspective(fieldOfViewRadians, aspect, zNear, zFar);
                 matrix = m4.translate(matrix, translation[0], translation[1], translation[2]);
                 matrix = m4.xRotate(matrix, rotation[0]);
                 matrix = m4.yRotate(matrix, rotation[1]);
