--- a/index10_3d_orthographic_projection.html
+++ b/index10_3d_orthographic_projection.html
@@ -293,7 +293,7 @@ void main() {
                 var translation = [150, 150, 0];
 
                 // 计算矩阵
-                var matrix = m4.orthographic(0, gl.canvas.clientWidth, gl.canvas.clientHeight, 0, 200, -200);
+                var matrix = m4.orthographic(0, gl.canvas.clientWidth, gl.canvas.clientHeight, 0, 200, -200); // 正射投影矩阵
                 matrix = m4.translate(matrix, translation[0], translation[1], translation[2]);
                 matrix = m4.xRotate(matrix, rotation[0]);
                 matrix = m4.yRotate(matrix, rotation[1]);
