--- a/index11_3d_perspective_projection.html
+++ b/index11_3d_perspective_projection.html
@@ -303,7 +303,7 @@ void main() {
                 var aspect = gl.canvas.clientWidth / gl.canvas.clientHeight;
                 var zNear = 1;
                 var zFar = 2000;
-                var matrix = m4.perspective(fieldOfViewRadians, aspect, zNear, zFar);
+                var matrix = m4.perspective(fieldOfViewRadians, aspect, zNear, zFar);   // 透视投影矩阵
                 matrix = m4.translate(matrix, translation[0], translation[1], translation[2]);
                 matrix = m4.xRotate(matrix, rotation[0]);
                 matrix = m4.yRotate(matrix, rotation[1]);
