--- a/index24_3d_font_use_texture.html
+++ b/index24_3d_font_use_texture.html
@@ -12,16 +12,16 @@
             function makeTextCanvas(text, width, height) {
                 textCtx.canvas.width = width;
                 textCtx.canvas.height = height;
-                textCtx.font = "20px monospace";
+                textCtx.font = "32px monospace";
                 textCtx.textAlign = "center";
                 textCtx.textBaseline = "middle";
-                textCtx.fillStyle = "black";
+                textCtx.fillStyle = "white";
                 textCtx.clearRect(0, 0, textCtx.canvas.width, textCtx.canvas.height);
                 textCtx.fillText(text, width / 2, height / 2);
                 return textCtx.canvas;
             }
 
-            function main(image) {
+            function main(textCanvas) {
                 const gl = getGL();
                 if (!gl) {
                     console.log("Sorry! No webgl2");
@@ -31,18 +31,43 @@
                 const fInfo = primitives.create3DFInfo(gl);
                 const textInfo = primitives.createXYQuadInfo(gl, 1);
 
-                if (!image) {
-                    image = makeTextCanvas("Hello!", 100, 26);
-                }
-                var textWidth = image.width;
-                var textHeight = image.height;
-                var textTex = gl.createTexture();
-                gl.activeTexture(gl.TEXTURE0 + 0);
-                gl.bindTexture(gl.TEXTURE_2D, textTex);
-                gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, image);
-                gl.generateMipmap(gl.TEXTURE_2D);
-                gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-                gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
+                const textTextures = [
+                    "anna", // 0
+                    "colin", // 1
+                    "james", // 2
+                    "danny", // 3
+                    "kalin", // 4
+                    "hiro", // 5
+                    "eddie", // 6
+                    "shu", // 7
+                    "brian", // 8
+                    "tami", // 9
+                    "rick", // 10
+                    "gene", // 11
+                    "natalie", // 12,
+                    "evan", // 13,
+                    "sakura", // 14,
+                    "kai", // 15,
+                ].map(function (name) {
+                    var textCanvas = makeTextCanvas(name, 120, 36);
+                    gl.pixelStorei(gl.UNPACK_PREMULTIPLY_ALPHA_WEBGL, true);
+                    var textWidth = textCanvas.width;
+                    var textHeight = textCanvas.height;
+                    var textTex = gl.createTexture();
+                    gl.activeTexture(gl.TEXTURE0 + 0);
+                    gl.bindTexture(gl.TEXTURE_2D, textTex);
+                    gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, textCanvas);
+                    gl.generateMipmap(gl.TEXTURE_2D);
+                    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
+                    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
+                    return {
+                        name,
+                        texture: textTex,
+                        width: textWidth,
+                        height: textHeight,
+                        color: [Math.random(), Math.random(), Math.random(), 1],
+                    };
+                });
 
                 var fUniforms = {
                     u_matrix: m4.identity(),
@@ -50,7 +75,7 @@
 
                 var textUniforms = {
                     u_matrix: m4.identity(),
-                    u_texture: textTex,
+                    u_texture: undefined,
                 };
 
                 var translation = [0, 30, 0];
@@ -78,7 +103,7 @@
                     gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
 
                     // Clear the canvas
-                    gl.clearColor(0, 0, 0, 0);
+                    gl.clearColor(1, 1, 0, 1);
                     gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
                     // turn on depth testing
@@ -87,8 +112,8 @@
                     // tell webgl to cull faces
                     gl.enable(gl.CULL_FACE);
 
-                    gl.enable(gl.BLEND);
-                    gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
+                    gl.disable(gl.BLEND);
+                    gl.depthMask(true);
 
                     // Compute the matrix
                     var aspect = gl.canvas.clientWidth / gl.canvas.clientHeight;
@@ -104,6 +129,7 @@
                     var cameraMatrix = m4.lookAt(cameraPosition, target, up);
                     var viewMatrix = m4.inverse(cameraMatrix);
 
+                    var textPositions = [];
                     var spread = 170;
                     for (var yy = -1; yy <= 1; ++yy) {
                         for (var xx = -2; xx <= 2; ++xx) {
@@ -125,27 +151,49 @@
 
                             gl.drawArrays(gl.TRIANGLES, 0, fInfo.vertexCount);
 
-                            // use just the view position of the 'F' for the text
-                            var textMatrix = m4.translate(projectionMatrix, fViewMatrix[12], fViewMatrix[13], fViewMatrix[14]);
-
-                            // scale the F to the size we need it.
-                            textMatrix = m4.scale(textMatrix, textWidth, textHeight, 1);
-
-                            // setup to draw the text.
-                            gl.useProgram(textInfo.programInfo.program);
-
-                            gl.bindVertexArray(textInfo.bufferInfo.vao);
-
-                            gl.activeTexture(gl.TEXTURE0 + 0);
-                            gl.bindTexture(gl.TEXTURE_2D, textUniforms.u_texture);
-                            textUniforms.u_matrix = textMatrix;
-                            gl.uniformMatrix4fv(textInfo.programInfo.matrixLocation, false, textUniforms.u_matrix);
-                            gl.uniform1i(textInfo.programInfo.textureLocation, 0);
-
-                            // Draw the text.
-                            gl.drawArrays(gl.TRIANGLES, 0, textInfo.vertexCount);
+                            textPositions.push([fViewMatrix[12], fViewMatrix[13], fViewMatrix[14]]);
                         }
                     }
+
+                    gl.enable(gl.BLEND);
+                    gl.blendFunc(gl.ONE, gl.ONE_MINUS_SRC_ALPHA);
+                    gl.depthMask(false);
+
+                    textPositions.forEach((position, index) => {
+                        var text = textTextures[index % textTextures.length];
+
+                        // 由于 pos 在视图空间，表示它是一个从眼睛位置出发的一个向量
+                        // 所以沿着向量朝眼睛方向移动一定距离
+                        var fromEye = m4.normalize(position);
+                        var amountToMoveTowardEye = 150; // 因为 F 是 150 个单位长
+                        var viewX = position[0] - fromEye[0] * amountToMoveTowardEye;
+                        var viewY = position[1] - fromEye[1] * amountToMoveTowardEye;
+                        var viewZ = position[2] - fromEye[2] * amountToMoveTowardEye;
+                        var desiredTextScale = -1 / gl.canvas.height; // 1x1 像素大小
+                        var s = viewZ * desiredTextScale;
+
+                        // use just the view position of the 'F' for the text
+                        var textMatrix = m4.translate(projectionMatrix, viewX, viewY, viewZ);
+
+                        // scale the F to the size we need it.
+                        textMatrix = m4.scale(textMatrix, text.width * s, text.height * s, 1);
+
+                        // setup to draw the text.
+                        gl.useProgram(textInfo.programInfo.program);
+
+                        gl.bindVertexArray(textInfo.bufferInfo.vao);
+
+                        gl.activeTexture(gl.TEXTURE0 + 0);
+                        textUniforms.u_texture = text.texture;
+                        gl.bindTexture(gl.TEXTURE_2D, textUniforms.u_texture);
+                        textUniforms.u_matrix = textMatrix;
+                        gl.uniformMatrix4fv(textInfo.programInfo.matrixLocation, false, textUniforms.u_matrix);
+                        gl.uniform1i(textInfo.programInfo.textureLocation, 0);
+                        gl.uniform4fv(textInfo.programInfo.colorLocation, text.color);
+
+                        // Draw the text.
+                        gl.drawArrays(gl.TRIANGLES, 0, textInfo.vertexCount);
+                    });
 
                     requestAnimationFrame(drawScene);
                 }
